--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -108,7 +108,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
 
  <div class="col">
     <RedisCard
-        title="Python based application on Heroku using Python"
+        title="Python based application on Heroku using Redis"
         description="How to build Python based Rate Limiting application on Heroku using Redis"
         page="/howtos/herokupython"
         />
