--- a/docs/explore/redisinsight/index-redisinsight.mdx
+++ b/docs/explore/redisinsight/index-redisinsight.mdx
@@ -38,7 +38,7 @@ A full-featured desktop GUI client, RedisInsight is available for Windows, macOS
 
 To use RedisInsight on a local Mac, you can download from the RedisInsight page on the RedisLabs website:
 
-Open [this](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) link to open up a form that allows you to select the operating system of your choice.
+[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
 ![My Image](redisinsightmac.png)
 
