--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -86,9 +86,9 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
 
  <div class="col">
     <RedisCard
-        title="HackerNews Clone"
-        description="How to build a HackerNews Clone Using RedisJSON"
-        page="/howtos/hackernews"
+        title="Analytics Dashboard app"
+        description="How to build an Analytics dashboard app using Redis"
+        page="/howtos/analytics"
         />
  </div>
 
