--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -108,6 +108,64 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
 
  <div class="col">
     <RedisCard
+        title="Redisearch Tutorial"
+        description="Getting Started with Redisearch"
+        page="/howtos/redisearch"
+        />
+ </div>
+
+
+ <div class="col">
+    <RedisCard
+        title="RedisJSON Tutorial"
+        description="Getting Started with RedisJSON"
+        page="/howtos/redisjson"
+        />
+ </div>
+
+
+<div class="col">
+    <RedisCard
+        title="RedisTimeSeries Tutorial"
+        description="Getting Started with RedisTimeSeries"
+        page="/howtos/redistimeseries"
+        />
+ </div>
+</div>
+
+<div class="row">
+
+ <div class="col">
+    <RedisCard
+        title="RedisGraph Tutorial"
+        description="Getting Started with RedisGraph"
+        page="/howtos/redisgraph"
+        />
+ </div>
+
+
+ <div class="col">
+    <RedisCard
+        title="RedisBloom"
+        description="Getting Started with RedisBloom"
+        page="/howtos/redisbloom"
+        />
+ </div>
+
+
+<div class="col">
+    <RedisCard
+        title="RedisGears"
+        description="Getting Started with RedisGears"
+        page="/howtos/redisgears"
+        />
+ </div>
+
+</div>
+<div class="row">
+
+ <div class="col">
+    <RedisCard
         title="Python based application on Heroku using Redis"
         description="How to build Python based Rate Limiting application on Heroku using Redis"
         page="/howtos/herokupython"
@@ -131,6 +189,5 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
         page="/howtos/herokujava"
         />
  </div>
-
 </div>
 
