--- a/docs/howtos/redisgears/index-redisgears.mdx
+++ b/docs/howtos/redisgears/index-redisgears.mdx
@@ -22,7 +22,7 @@ Before you can use RedisGears, you have to install the RedisGears module. We wil
 
 ### Step 2. Verifying if RedisGears module is enabled:
 
-You can directly use ```redis-cli`` CLI to verify if RedisGears module is properly loaded:
+You can directly use ```redis-cli``` CLI to verify if RedisGears module("rg") is properly loaded or not.
 
 
   ```bash
@@ -34,7 +34,6 @@ You can directly use ```redis-cli`` CLI to verify if RedisGears module is proper
    module:name=rg,ver=10006,api=1,filters=0,usedby=[],using=[ai],options=[]
   ```
 
-If it shows "rg" module name, it shows that RedisGears is loaded.
 
 ### Step 3. Create a "wordcount" Python script 
 
