--- a/docs/howtos/leaderboard/index-leaderboard.mdx
+++ b/docs/howtos/leaderboard/index-leaderboard.mdx
@@ -246,3 +246,11 @@ Using generated security password: ea2d5326-b04c-4f93-b771-57bcb53f656e
    ```bash
     ZCOUNT companyLeaderBoard 1000000000000 +inf
    ```
+
+### References
+
+- [Build a Real-Time Leaderboard app using Redis & Nodejs](https://github.com/redis-developer/basic-redis-leaderboard-demo-nodejs)
+- [Build a Real-Time Leaderboard app using Redis & Ruby](https://github.com/redis-developer/basic-redis-leaderboard-demo-ruby)
+- [Build a Real-Time Leaderboard app using Redis & Python](https://github.com/redis-developer/basic-redis-leaderboard-demo-python)
+- [Build a Real-Time Leaderboard app using Redis & .NET](https://github.com/redis-developer/basic-redis-leaderboard-demo-dotnet)
+- [Build a Real-Time Leaderboard app using Redis & Go](https://github.com/redis-developer/basic-redis-leaderboard-demo-go)
