--- a/docs/howtos/ratelimiting/index-ratelimiting.mdx
+++ b/docs/howtos/ratelimiting/index-ratelimiting.mdx
@@ -12,7 +12,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 ![My Image](ratelimiting.png)
 
-Rate limiting is a mechanism that many developers may have to deal with at some point in their life. It’s useful for a variety of purposes like sharing access to limited resources or limit the number of requests made to an API endpoint and respond with a 429 status code. In this tutorial, we will see how to implement Rate Limiting using various programming languages:
+RRate limiting is a mechanism that many developers may have to deal with at some point in their life. It’s useful for a variety of purposes like sharing access to limited resources or limiting the number of requests made to an API endpoint and responding with a 429 status code. In this tutorial, we will see how to implement Rate Limiting using various programming languages: 
 
 
 <Tabs
@@ -164,8 +164,7 @@ docker-compose up -d --build
 
 ### Step 4. Setting up an environmental variable 
 
-Open directory server (cd server): copy .env.example to create .env  
-And provide the values for environment variables (if needed)
+Open directory server (cd server): copy .env.example to create .env and provide the values for environment variables (if needed).
 
 
 ```
