--- a/docs/howtos/leaderboard/index-leaderboard.mdx
+++ b/docs/howtos/leaderboard/index-leaderboard.mdx
@@ -63,7 +63,7 @@ REDIS_PASSWORD=
 REDIS_DB=
 ```
 
-### Step 6. Run backend
+### Step 6. Run the backend
 
 - Install gradle 
 
@@ -81,7 +81,7 @@ Follow the following link https://docs.oracle.com/javase/10/install/installation
 export $(cat .env | xargs)
 ```
 
-### Step 7. Running the wrapper task
+### Step 7. Run the wrapper task
 
 To use Wrapper, we need to generate some particular files. We'll generate these files using the built-in Gradle task called wrapper. 
 Note that we need to generate these files only once.
@@ -112,7 +112,7 @@ BUILD SUCCESSFUL in 29s
 1 actionable task: 1 executed
 ```
 
-### Step 8. Performing the build task
+### Step 8. Perform the build task
 
 The Gradle Wrapper is now available for building your project. It's time to run the wrapper script to perform the build task.
 
@@ -130,7 +130,7 @@ BUILD SUCCESSFUL in 1m 13s
 12 actionable tasks: 12 executed
 ```
 
-### Step 9. Running your application
+### Step 9. Run your application
 
 ```
 ./gradlew run
@@ -171,7 +171,7 @@ Using generated security password: ea2d5326-b04c-4f93-b771-57bcb53f656e
 ```
 
 
-### Step 10. Accessing the leaderboard application
+### Step 10. Access the leaderboard application
 
 ![My Image](leaderboard.png)
 
