--- a/docs/explore/redisdatasource/index-redisdatasource.mdx
+++ b/docs/explore/redisdatasource/index-redisdatasource.mdx
@@ -45,7 +45,7 @@ The Redis Data Source for Grafana is a plug-in that allows users to connect to t
  ```
 
 
-### Step 2. Install Redis datasource using `grafana-cli`
+### Step 2. Install Redis Datasource 
 
 
  ```bash
@@ -55,7 +55,7 @@ The Redis Data Source for Grafana is a plug-in that allows users to connect to t
 
 The brew page downloads and untars the files into /usr/local/Cellar/grafana/version.
 
-### Step 3. Start Grafana using the command:
+### Step 3. Start Grafana service
 
  ```bash
   brew services start grafana
