--- a/docs/explore/redisdatasource/index-redisdatasource.mdx
+++ b/docs/explore/redisdatasource/index-redisdatasource.mdx
@@ -63,6 +63,8 @@ The brew page downloads and untars the files into /usr/local/Cellar/grafana/vers
 
 ### Step 4. Access Grafana dashboard
 
+Open https://IP:3000 to access grafana. The default username/password is admin/admin.
+
 ![grafana](grafana.png)
 
 
