--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -101,6 +101,33 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
  </div>
 </div>
 
+<div class="row">
+
+ <div class="col">
+    <RedisCard
+        title="Hackernews Clone"
+        description="Building a Hackernews Clone using RedisJSON and RediSearch"
+        page="/howtos/hackernews"
+        />
+ </div>
+
+
+ <div class="col">
+    <RedisCard
+        title="Pipeline for Natural Language Processing using RedisGears"
+        description="How to build a pipeline for  Natural Language Processing using RedisGears"
+        page="/howtos/nlp"
+        />
+ </div>
+
+ <div class="col">
+    <RedisCard
+        title="Movies database using RedisGraph and NodeJS"
+        description="How to build Movies database using RedisGraph & NodeJS"
+        page="/howtos/redisgraphmovies"
+        />
+ </div>
+</div>
 
 ## Tutorials
 
