--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -37,7 +37,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
 
  <div class="col">
     <RedisCard 
-        title="Movies Database" 
+        title="Movies Database using RediSearch" 
         description="How to search and list Movies database using RediSearch" 
         page="/howtos/moviesdatabase/getting-started"
         />
@@ -122,7 +122,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
 
  <div class="col">
     <RedisCard
-        title="Movies database using RedisGraph and NodeJS"
+        title="Movies database using RedisGraph"
         description="How to build Movies database using RedisGraph & NodeJS"
         page="/howtos/redisgraphmovies"
         />
