--- a/docs/howtos/redisgraphmovies/index-redisgraphmovies.mdx
+++ b/docs/howtos/redisgraphmovies/index-redisgraphmovies.mdx
@@ -480,6 +480,6 @@ On this page a user can rate the film and view the Actors/directors who particip
 
 ### References
 
- - [How to list and search Movies Database using Redisearch](/howtos/moviesdatabase)
+ - [How to list and search Movies Database using Redisearch](/howtos/moviesdatabase/getting-started)
  - [RediSearch 2.0’s New Indexing Capabilities to add search to Movie app](https://redislabs.com/blog/getting-started-with-redisearch-2-0/)
 
