--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -49,7 +49,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis La
  <div class="col">
     <RedisCard 
         title="Leaderboard" 
-        description="Building a Real-Time Leaderboard using Reds" 
+        description="Building a Real-Time Leaderboard using Redis" 
         page="/howtos/leaderboard"
         />
  </div>
