--- a/docs/howtos/redisgraphmovies/index-redisgraphmovies.mdx
+++ b/docs/howtos/redisgraphmovies/index-redisgraphmovies.mdx
@@ -5,8 +5,8 @@ sidebar_label: Building Movies database app using RedisGraph and NodeJS
 slug: /howtos/redisgraphmovies
 ---
 
-This application is an IMDB clone with basic account authentication and movie recommendation functionality.
-It shows how to use RedisGraph in NodeJS.
+IMDb(Internet Movie Database) is the world's most popular and authoritative source for information on movies, TV shows and celebrities. IMDb has a publicly accessible API and this application is an IMDB clone with basic account authentication and movie recommendation functionality. You will learn the power of RedisGraph and NodeJS to build a simple movie database.
+
 
 ### Technical Stack
 
