--- a/docs/howtos/redisgraphmovies/index-redisgraphmovies.mdx
+++ b/docs/howtos/redisgraphmovies/index-redisgraphmovies.mdx
@@ -5,7 +5,7 @@ sidebar_label: Building Movies database app using RedisGraph and NodeJS
 slug: /howtos/redisgraphmovies
 ---
 
-IMDb(Internet Movie Database) is the world's most popular and authoritative source for information on movies, TV shows and celebrities. IMDb has a publicly accessible API and this application is an IMDB clone with basic account authentication and movie recommendation functionality. You will learn the power of RedisGraph and NodeJS to build a simple movie database.
+IMDb(Internet Movie Database) is the world's most popular and authoritative source for information on movies, TV shows and celebrities. This application is an IMDB clone with basic account authentication and movie recommendation functionality. You will learn the power of RedisGraph and NodeJS to build a simple movie database.
 
 
 ### Technical Stack
