--- a/docs/howtos/nlp/index-nlp.mdx
+++ b/docs/howtos/nlp/index-nlp.mdx
@@ -3,6 +3,7 @@ id: index-nlp
 title: Building a Pipeline for Natural Language Processing using RedisGears 
 sidebar_label: Building a Pipeline for Natural Language Processing using RedisGears
 slug: /howtos/nlp
+marp: true
 ---
 
 import Tabs from '@theme/Tabs';
@@ -13,7 +14,54 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 Author - Alex Mikhalev, Ajeet Singh Raina
 
-In this tutorial, you will learn how to build a pipeline for Natural Language Processing(NLP) using RedisGears. For this demonstration, we will be leveraging the Kaggle CORD19 datasets. The implementation is designed to avoid running out of memory, leveraging Redis Cluster and Redis Gears, where the use of Redis Gears allows to process data on storage without the need to move data in and out of the Redis cluster. Redis Cluster allows horizontal scalability up to 1000 nodes and together with Redis Gears provides a distributed system where data scientist/ML engineers can focus on processing steps without worry about writing tons of scaffoldings for distributed calculations.
+##  Goal
+
+In this tutorial, you will learn how to build a pipeline for Natural Language Processing(NLP) using RedisGears. For this demonstration, we will be leveraging the Kaggle CORD19 datasets. The implementation is designed to avoid running out of memory, leveraging Redis Cluster and Redis Gears, where the use of Redis Gears allows to process data on storage without the need to move data in and out of the Redis cluster - using Redis Cluster as data fabric. Redis Cluster allows horizontal scalability up to 1000 nodes and together with Redis Gears provides a distributed system where data scientist/ML engineers can focus on processing steps without worry about writing tons of scaffoldings for distributed calculations.
+
+This project was built with the aim to make it easier for other people to contribute and build better information and knowledge management products.
+
+## Why use RedisGears for data scientists?
+
+RedisGears have enormous potential, particularly for text processing - you can process your data “on data” without need to move them in and out of memory, summary of the important points:
+1.In Memory storage (Horizontally scalable if it’s Redis cluster)
+2.Processing of data (on data) without need to move in and out
+3.Gears - like Spark on Hadoop, process data intelligently on storage(in-memory) without need to move data in and out
+4.Redis in cluster mode with RedisGears and python enabled takes 20 MB RAM. Think how much more data you can shuffle into your laptop or server.
+
+## What is a knowledge graph?
+
+Today, in 2020 we live in the world of new systems that operate not just files and folders, or web pages, but entities with their properties and relationships between them, organized into hierarchies of classes and categories. These systems are used everywhere from military-industrial complex to our everyday lives. Palantir, Primer, and others enable massive intelligence and counter-intelligence projects in military and security forces, Quid and RecordedFuture enable competitive analytics, Bottlenose and others enable online reputation analytics, Microsoft Graph enables new kinds of productivity apps for the enterprises, Google Knowledge Graph and Microsoft’s Satori enable everyday search queries, and together with Amazon Information Graph they power corresponding AI assistants by enabling them to answer questions about the world facts.
+
+All these (and many other more specialized) systems are used in different domains, but all of them use Knowledge Graphs as their foundation.
+
+Knowledge graphs are one of the best ways to connect and make sense out of information from different data sources, following the motto of one of the vendors: [“It’s about things not strings”](https://www.poolparty.biz/news-events/knowledge-graphs-connecting-dots-increasingly-complex-world/). 
+
+Knowledge Graph consists of thesaurus, taxonomy and ontology. 
+In this pipeline I assume knowledge is captured in medical metathesaurus [UMLS](https://www.nlm.nih.gov/research/umls/index.html) and concepts in text are related if they are part of the same sentence, therefore concept become node, their relationship becomes edge: 
+
+![concepts1](concepts1.png)
+![concepts2](concepts2.png)
+
+Concepts have CUI (Concept Unique Identifiers) and those will be primary keys in nodes, linked to UMLS thesaurus. For example for if you search “How does temperature and humidity affect the transmission of 2019-nCoV?” on demo website [http://thepattern.digital/](http://thepattern.digital) and move slider to 1996 there is an edge connecting transmission (C5190195) and birth (C5195639) and the part of sentence matched “the rate of transmission to an infant born to” from the report titled “Afebrile Pneumonia in infants”. 
+
+![concepts3](concepts3.png)
+
+## Redis Gears for NLP pre-processing
+### Overall Architecture Overview (Components Diagram) 
+
+![component_diagram](component_diagram.png)
+
+Intake step - is very simple put all JSON records into RedisCluster, then NLP pipeline starts processing all records, code is [here](https://github.com/applied-knowledge-systems/the-pattern-platform/blob/main/RedisIntakeRedisClusterSample.py).
+
+### How are the steps of the NLP pipeline fit into RedisGears? 
+
+1.For each record — detect language (discard non English), it’s [filter](https://oss.redislabs.com/redisgears/operations.html#filter)
+
+2.Map paragraphs into a sentence — [flatmap](https://oss.redislabs.com/redisgears/operations.html#flatmap)
+
+3.Sentences spellchecker — it’s [map](https://oss.redislabs.com/redisgears/operations.html#map)
+
+4.Save sentences into hash — [processor](https://oss.redislabs.com/redisgears/operations.html#processor)
 
 
 
@@ -96,5 +144,76 @@ redis-cli -p 9001 -h 127.0.0.1 GRAPH.QUERY cord19medical "MATCH (e:entity)-[r]->
 curl -i -H "Content-Type: application/json" -X POST -d '{"search":"How does temperature and humidity affect the transmission of 2019-nCoV"}' http://localhost:8080/gsearch
 ```
 
+## Walkthrough
+
+While RedisGears allows to deploy and run Machine Learning libraries like [spacy](https://github.com/AlexMikhalev/cord19redisknowledgegraph/blob/master/spacy_sentences_geared.py) and [BERT transformers](https://github.com/AlexMikhalev/cord19redisknowledgegraph/blob/master/tokenizer_bert_geared.py), the solution above uses simpler approach:
+
+```
+gb = GB('KeysReader')
+gb.filter(filter_language)
+gb.flatmap(parse_paragraphs)
+gb.map(spellcheck_sentences)
+gb.foreach(save_sentences)
+gb.count()
+gb.register('paragraphs:*',keyTypes=['string','hash'], mode="async_local")
+```
+
+This is the overall pipeline: those 7 lines allow you to run logic in a distributed cluster or on a single machine using all available CPUs - no changes required until you need to scale over more 1000 nodes. I use KeysReader registered for namespace paragraphs for all strings or hashes. My pipeline would need to run in async mode. For data scientists, I would recommend using gb.run to make sure gears function work and it will run in batch mode and then change it to register - to capture new data. By default, functions will return output, hence the need for count() - to prevent fetching the whole dataset back to the command issuing machine (90 GB for Cord19). 
+
+Overall pre-processing is a straightforward - [full code](https://github.com/applied-knowledge-systems/the-pattern-platform/blob/main/gears_pipeline_sentence_register.py) is here.
+
+Things to keep in mind:
+
+1. Node process can only save locally - we don't move data, anything you want to save should have hashtag, for example to add to the set of processed_docs:
+
+```
+execute('SADD','processed_docs_{%s}' % hashtag(),article_id)
+```
+
+2. Loading external libraries into the computational threat, for example, symspell requires additional dictionaries and needs two steps to load:
+
+```
+"""
+load symspell and relevant dictionaries
+"""
+sym_spell=None 
+
+def load_symspell():
+    import pkg_resources
+    from symspellpy import SymSpell, Verbosity
+    sym_spell = SymSpell(max_dictionary_edit_distance=1, prefix_length=7)
+    dictionary_path = pkg_resources.resource_filename(
+        "symspellpy", "frequency_dictionary_en_82_765.txt")
+    bigram_path = pkg_resources.resource_filename(
+        "symspellpy", "frequency_bigramdictionary_en_243_342.txt")
+    # term_index is the column of the term and count_index is the
+    # column of the term frequency
+    sym_spell.load_dictionary(dictionary_path, term_index=0, count_index=1)
+    sym_spell.load_bigram_dictionary(bigram_path, term_index=0, count_index=2)
+    return sym_spell
+```
+
+3. Scispacy is a great library and data science tool, but after a few iterations with deploying it I ended up reading data model documentation for UMLS Methathesaurus and decided to build Aho-Corasick automata directly from UMLS data. (MRXW_ENG.RRF contains all terms form for English mapped to CUI). Aho-Corasick allowed me to match incoming sentences into pairs of nodes (concepts from the medical dictionary) and present sentences as edges in a graph, Gears related code is simple:
+
+```
+bg = GearsBuilder('KeysReader')
+bg.foreach(process_item)
+bg.count()
+bg.register('sentence:*',  mode="async_local",onRegistered=OnRegisteredAutomata)
+
+```
+
+OnRegisteredAutomata will perform similarly to symspell example above except it will download pre-build Aho-Corasick automata (30Mb). 
+Aho-Corasick is a very fast matcher and allows to perform >900 Mb text per second even on commodity laptop, RedisGears cluster makes a very smooth distribution of data and ML model and matching using available CPU and Memory. Full matcher [code](https://github.com/applied-knowledge-systems/the-pattern-platform/blob/main/sentences_matcher_register.py).
+
+Output of the matcher: nodes and edges are candidates to use another RedisGears pattern rgsync where you can write fast into Redis and RedisGears are going to replicate data into slower storage using RedisStreams.
+But I decided to use streams and handcraft the population of the RedisGraph database, which will be focus of the next blog post.
+
+Output of the matcher: nodes and edges are candidates to use another RedisGears pattern [rgsync](https://github.com/RedisGears/rgsync) where you can write fast into Redis and RedisGears are going to replicate data into slower storage using RedisStreams, while this demo uses streams and populates RedisGraph database with nodes and edges calculating rank of each. 
 
 
+## Call to action
+
+We took OCR scans in JSON format and turned them into Knowledge Graph, demonstrating how you can traditional Semantic Network/OWL/Methathesaurus technique based on Unified Medical Language System. Redis Ecosystem offers a lot to the data science community, and can take place at the core of Kaggle notebooks, ML frameworks and make deployment and distribution of data more enjoyable. The success of our industry depends on how our tools work together — regardless of whether they are engineering, data science, machine learning and organisational or architectural.
+
+With help of RedisLabs guys and community full pipeline code is available https://github.com/applied-knowledge-systems/the-pattern-platform if you want to try it locally there is a docker launch script and short quickstart guide. PR and suggestions are welcome, overall goal of the project is to allow other to build their more interesting pipeline on top of it.
